--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&display=swap');
+
 :root {
   --blue: #303952;
   --blue-accent: #546de5;
   --pink: #f8a5c2;
   --dark-grey: #596275;
-  --black: #2C3A47;
+  --black: #2C3A47; /* El valor de una custom property incluye el espacio en blanco */
   --white: #f5f6fa;
-  --radus: 10px;
+  --lightGrey: #f0efeb;
+  --radius: 10px;
+  --card-bg: var(--lightGrey);
 }
 
 body{
+  --black: #2C3A47;
   font-family: 'Nunito', sans-serif;
+  background-color: var(--white);
 }
 
 img{
@@ -21,11 +26,16 @@ img{
 header.main{
   background-color: var(--blue);
   color: var(--white);
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  padding:1em;
+  min-height: 100vh;
+  display: grid;
+  grid-template-rows: auto 1fr;
+  place-items: center;
+  text-align: center;
+}
+
+header.main .toggle{
+  justify-self: flex-end;
 }
 
 header.main h1{
@@ -70,8 +80,69 @@ header.main h1{
 }
 
 .card{
-  
-  border-radius: var(--radus);
-  box-shadow:  20px 20px 60px #bebebe,
-             -20px -20px 60px #ffffff;
+  background-color: var(--card-bg);
+  border-radius: var(--radius);
+  box-shadow:  20px 20px 60px var(--card-bg),
+             -20px -20px 60px var(--card-bg);
+}
+
+#dark-toggle{
+  display: none;
+}
+
+#dark-toggle + label{
+  cursor: pointer;
+  --toggleHeight: 1.5rem;
+  display: inline-block;
+  width: calc(var(--toggleHeight )* 2);
+  height:var(--toggleHeight);
+  border-radius: var(--radius);
+  background-color: var(--blue-accent);
+  position: relative;
+  margin-right: 0.4rem;
+}
+
+#dark-toggle + label::after{
+  --size:  calc(var(--toggleHeight) * 1.33);
+  position: absolute;
+  content: "";
+  width:var(--size);
+  height:var(--size);
+  border-radius: 50%;
+  background-color: var(--pink);
+  left: calc((var(--size) - var(--toggleHeight)) / 2 * -1);
+  top: calc((var(--size) - var(--toggleHeight)) / 2 * -1);
+  transition: all 0.2s ease-in;
+}
+
+#dark-toggle:checked + label::after{
+  left:calc(100% - (var(--size) - var(--toggleHeight) / 2));
+}
+
+@media (prefers-color-scheme: dark) {
+  body:not(.force-light){
+    --blue: #071e3d;
+    --blue-accent: #546de5;
+    --pink: #f8a5c2;
+    --dark-grey: #596275;
+    --black: #2C3A47;
+    --white: #f6e9e9;
+    --radus: 10px;
+    --card-bg: var(--blue);
+    background-color: var(--black);
+    color: var(--white);
+  }  
+}
+
+body.force-dark{
+  --blue: #071e3d;
+  --blue-accent: #546de5;
+  --pink: #f8a5c2;
+  --dark-grey: #596275;
+  --black: #2C3A47;
+  --white: #f6e9e9;
+  --radus: 10px;
+  --card-bg: var(--blue);
+  background-color: var(--black);
+  color: var(--white);
 }
